--- a/samples/.devcontainer/devcontainer.json
+++ b/samples/.devcontainer/devcontainer.json
@@ -1,35 +1,11 @@
 {
-	"name": "Fabric PySpark local cluster",
-	"dockerComposeFile": ["./docker-compose.yaml"],
-    "workspaceFolder": "/code",
-    "service": "dev-synapse",
-    "forwardPorts": [4040, 4041],
-    "portsAttributes": {
-        "4040": {
-            "label": "web",
-            "onAutoForward": "notify"
-        },
-        "4041": {
-            "label": "web",
-            "onAutoForward": "notify"
-        }
-    },
-    "customizations": {
-        "vscode" : {
-            "settings": {
-                "python.defaultInterpreterPath": "/opt/conda/bin/python",
-                "terminal.integrated.profiles.linux": {
-                    "bash": {
-                        "path": "/bin/bash"
-                    }
-                },
-                "terminal.integrated.defaultProfile.linux":  "bash",
-                "python.linting.enabled": true,
-                "python.linting.pylintEnabled": true
-            },
-            "extensions": [
-                "ms-python.python", "ms-toolsai.jupyter", "synapsevscode.synapse"
-            ]
-        }
+    "name": "Python Dev Container",
+    "image": "mcr.microsoft.com/vscode/devcontainers/python:3.9",
+    "extensions": [
+        "fabric.vscode-fabric-functions",
+        "fabric.vscode-fabric"
+    ],
+    "settings": {
+        "python.pythonPath": "/usr/local/bin/python"
     }
 }
