--- a/samples/.devcontainer/devcontainer.json
+++ b/samples/.devcontainer/devcontainer.json
@@ -1,9 +1,7 @@
 {
   "name": "Fabric Extensions for Python UDF",
   "dockerFile": "Dockerfile",
-  "forwardPorts": [
-    7071
-  ],
+  "forwardPorts": [ 7071 ] ,
   "image": "mcr.microsoft.com/vscode/devcontainers/python:3.9",
   "extensions": [
     "fabric.vscode-fabric-functions",
